--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   url_launcher: ^6.2.5
   font_awesome_flutter: ^10.7.0
   image_picker: ^1.1.1
+  http: ^0.13.6
+  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
