--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   qr_code_scanner: ^1.0.1
+  geolocator: ^11.0.0
   permission_handler: ^11.4.0
   firebase_core: ^2.30.0
   firebase_auth: ^4.17.3
