--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^1.1.1
   http: ^0.13.6
   intl: ^0.18.0
+  google_fonts: ^4.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
