--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   http: ^0.13.6
   intl: ^0.18.0
   google_fonts: ^4.0.4
+  shared_preferences: ^2.2.3
+  
 
 
   # The following adds the Cupertino Icons font to your application.
