--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   shared_preferences: ^2.2.3
   webview_flutter: ^4.8.0
   flutter_image_compress: ^2.3.0
+  qr_flutter: ^4.1.0  
 
   
 
