--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
 
     <application
         android:name="${applicationName}"
-        android:label="escanear_qr"
+        android:label="Driver Primebox"
         android:icon="@mipmap/ic_launcher">
 
         <!-- Flutter embebido -->
