--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   file_picker: ^8.0.0
   mime: ^1.0.5
   flutter_launcher_icons: ^0.14.4
+  path_provider: ^2.1.0
+ 
  
 
 dev_dependencies:
