--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,3 @@
-# Podfile generado manualmente para Flutter + iOS
 platform :ios, '13.0'
 
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -36,7 +35,7 @@ end
 post_install do |installer|
   flutter_additional_ios_build_settings(installer)
 
-  # 👇 Fix para el error de Firebase: "Include of non-modular header"
+  # Fix Firebase (non-modular headers)
   installer.pods_project.build_configurations.each do |config|
     config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
   end
